# A-maze-ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.py  config.txt  default_config.txt  output_maze.txt  pyproject.toml
src/mazegen/: cell.py  output_maze.py  perfect_maze_algo.py  solve_perfect_maze.py  structure.py
